--- a/tarefas/02_tarefas_passadas/03_implementacoes_e_funcoes/package.json
+++ b/tarefas/02_tarefas_passadas/03_implementacoes_e_funcoes/package.json
@@ -1,14 +1,1 @@
-{ 
-    "private": true,
-    "name": "teste-unitario",
-    "devDependencies": {
-      "@babel/core": "*",
-      "@babel/preset-env": "*",
-      "babel-jest": "*",
-      "jest": "*"
-    },
-    "scripts": {
-      "test": "jest"
-    }
-}
-  
+{"private":true,"name":"teste-unitario","devDependencies":{"@babel/core":"*","@babel/preset-env":"*","babel-jest":"*","jest":"*"},"scripts":{"test":"jest"},"dependencies":{"teste-unitario":"file:"}}
