--- a/tarefas/02_tarefas_passadas/02_criacao_de_uma_apliacao_em_nodejs/package.json
+++ b/tarefas/02_tarefas_passadas/02_criacao_de_uma_apliacao_em_nodejs/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "Leonardo <leonardojosantos@gmail.com>",
   "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  },
   "dependencies": {
     "criacao_de_uma_apliacao_em_nodejs": "file:"
   }
